--- a/README
+++ b/README
@@ -15,3 +15,6 @@ D:\work\bluetoothapk\app\build\outputs\apk\debug\debug.apk 就是编译生成的
 3.执行install.bat 
 4.查看apk 生效
 
+modify install
+20241116 修改install.bat,apk 路径变为相对路径，  使之可以适用git仓库，不再强制显示安装绝对路径的apk，
+
