--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="case_tab">案例功能</string>
     <string name="list_tab">用例列表</string>
     <string name="interconnect_tab">互连</string>
+    <string name="nrf_tab">nrf</string>
     <string name="bluetooth_test">蓝牙自动化测试</string>
     <string name="bluetooth_btn_start_pair">开始配对</string>
     <string name="bluetooth_btn_recv_pair">接受配对</string>
